--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "body-parser": "~1.17.1",
+    "config-lite": "^2.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "hbs": "~4.0.1",
+    "mongoose": "^4.10.7",
     "morgan": "~1.8.1",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
