--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
+    "bootstrap": "^3.3.7",
     "config-lite": "^2.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "express-flash": "0.0.2",
+    "express-session": "^1.15.3",
     "hbs": "~4.0.1",
     "mongoose": "^4.10.7",
     "morgan": "~1.8.1",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
-    "serve-favicon": "~2.4.2"
+    "restc": "0.0.7",
+    "serve-favicon": "~2.4.2",
+    "vue.js": "^0.3.2"
   }
 }
