--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.15.3",
     "hbs": "~4.0.1",
+    "moment": "^2.18.1",
     "mongoose": "^4.10.7",
     "morgan": "~1.8.1",
     "passport": "^0.3.2",
