--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "config-lite": "^2.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
+    "echarts": "^3.6.2",
     "express": "~4.15.2",
     "express-flash": "0.0.2",
     "express-session": "^1.15.3",
