--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.18.1",
     "mongoose": "^4.10.7",
     "morgan": "~1.8.1",
+    "nodemailer": "^4.0.1",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
