--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "express-session": "^1.15.3",
     "hbs": "~4.0.1",
     "jquery": "^3.2.1",
+    "jsonfile": "^3.0.1",
     "moment": "^2.18.1",
     "mongoose": "^4.10.7",
     "morgan": "~1.8.1",
+    "multer": "^1.3.0",
     "nodemailer": "^4.0.1",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
